# greenspace-accessibility-sabadell

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  environment.yml  pyproject.toml
.github/workflows/: lint.yaml
notebooks/: 01-spatial-extent.ipynb  02-ndvi-raster.ipynb
